--- a/style.css
+++ b/style.css
@@ -1,33 +1,26 @@
 body{
-    background-image: url("https://i.ibb.co/8mFb9rs/hack-27.png");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-attachment: fixed;
+    background-color: #dad3db;
 }
 
-h1{
-    text-align: center;
-    color: cyan;
+
+.main{
+    font-weight: bold;
+    font-size: 40px;
+    font-family: monospace;
+    position: relative;
+    left: 300px;
 }
 
-.pic1 img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 1200px;
-    height: 500px;
-}
-
-ul li{
-    color: aliceblue;
+.sub-main{
+    font-weight: bold;
     font-size: 20px;
+    font-family: monospace;
+    position: relative;
+    left: 300px;
 }
 
-.social{
-    text-decoration: none;
-    border:0px;
-    outline:none;
-    border-width: 0px;
-    outline-width:0px;
-    border-bottom: none;
+p{
+    margin-top: 100vh;
+    margin: 0%;
+    padding: 0%;
 }
