--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     font-size: 40px;
     font-family: monospace;
     position: relative;
-    left: 300px;
+    left: 200px;
 }
 
 .sub-main{
@@ -16,11 +16,48 @@ body{
     font-size: 20px;
     font-family: monospace;
     position: relative;
-    left: 300px;
+    left: 200px;
 }
 
 p{
-    margin-top: 100vh;
     margin: 0%;
     padding: 0%;
+}
+
+img{
+    width: 350px;
+    height: 350px;
+    border-radius: 100%;
+    position: relative;
+    left: 200px;
+    margin-top: 2cm;
+}
+
+.hello{
+    font-weight: bold;
+    font-size: 60px;
+    position: absolute;
+    top: 150px;
+    right: 500px;
+    width: 200px;
+    height: 100px;
+}
+
+.abit{
+    font-size: 50px;
+    position: absolute;
+    top: 220px;
+    right: 250px;
+    width: 400px;
+    height: 100px;
+}
+
+ul li{
+    margin: 0%;
+    font-size: 20px;
+    top: 20px;
+    right: 250px;
+    width: 400px;
+    height: 100px;
+}
 }
